--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^3.9.7",
     "pg": "^8.11.5",
     "sqlite3": "^5.1.7",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "3.4.3"
   },
   "devDependencies": {
