--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@astrojs/react": "3.4.0",
     "@astrojs/tailwind": "5.1.0",
     "@tailwindcss/typography": "0.5.12",
-    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/react": "18.3.3",
     "astro": "4.6.3",
     "mariadb": "3.3.0",
     "msnodesqlv8": "4.2.1",
     "mssql": "10.0.2",
     "mysql2": "3.9.7",
+    "pdf-lib": "1.17.1",
     "pg": "8.11.5",
-    "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react": "18.3.1",
     "sqlite3": "5.1.7",
     "tailwind-scrollbar": "3.1.0",
     "tailwindcss": "3.4.3"
